# support-orchestration

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
clients/example-client/: config.yaml
config/: runtime.yaml
docs/: 0-llm-rag-design-optimization.md  1-warehouse-systems.md  2-support-process.md  3-agent-design.md  4-technical-build.md  claude-code-kickoff-prompts.md  vector-databases.md
evals/: __init__.py  __main__.py  adapters.py  baseline.py  baseline.yaml  cli.py  harness.py
evals/fixtures/base/: asrs_order_retrieval_timeout_01.yaml  asrs_order_storage_unavailable_01.yaml  esb_order_bad_input_01.yaml  esb_order_stuck_queue_01.yaml  example_order_stuck_prioritized.yaml  gtp_decant_bin_not_placed_01.yaml  gtp_picking_order_ims_hold_01.yaml  gtp_picking_order_service_down_01.yaml  gtp_picking_tote_bin_unavailable_relay_01.yaml  gtp_picking_tote_ims_hold_01.yaml  ims_order_count_discrepancy_01.yaml  ims_order_service_down_01.yaml  infra_order_oom_crash_01.yaml  lpn_order_data_missing_01.yaml  lpn_order_printer_fault_01.yaml  wcs_order_service_down_01.yaml  wcs_order_socket_failure_01.yaml  wcs_tote_socket_failure_01.yaml  wes_order_ims_hold.yaml  wes_order_lost_ack.yaml  wes_order_stuck_at_validated.yaml
maps/base/: order.yaml  tote.yaml
skills/asrs-diagnosis/: SKILL.md  glossary.md
skills/decant-diagnosis/: SKILL.md
skills/diagnostic-method/: SKILL.md
skills/dialect-protocol/: SKILL.md
skills/esb-diagnosis/: SKILL.md  glossary.md
skills/evidence-gathering/: SKILL.md
skills/fix-determination/: SKILL.md
skills/gtp-decant-diagnosis/: SKILL.md  glossary.md
skills/gtp-picking-diagnosis/: SKILL.md  glossary.md
skills/ims-diagnosis/: SKILL.md  glossary.md
skills/infra-diagnosis/: SKILL.md  glossary.md
skills/jira-record/: SKILL.md
skills/lifecycle-map-reading/: SKILL.md
skills/lpn-diagnosis/: SKILL.md  glossary.md
skills/picking-diagnosis/: SKILL.md
skills/wcs-diagnosis/: SKILL.md  glossary.md
skills/wes-diagnosis/: SKILL.md  glossary.md
support_orchestration/: __init__.py  __main__.py  runtime.py
support_orchestration/config/: __init__.py  base.py
support_orchestration/glue/: __init__.py  bot.py  jira.py  teams.py
support_orchestration/models/: __init__.py  case.py  diagnosis.py
support_orchestration/orchestrator/: __init__.py  orchestrator.py  prompts.py  triage.py
support_orchestration/storage/: audit.py  state_store.py
support_orchestration/subagents/: __init__.py  base.py  prompts.py
support_orchestration/tools/: __init__.py  db_state_reader.py  github_reader.py  history_retrieval.py  hooks.py  log_reader.py  mcp_server.py  phoenix_resolver.py
support_orchestration/tools/adapters/: __init__.py  db_adapters.py  factory.py  github_adapter.py  log_adapters.py  phoenix_adapter.py  vector_adapter.py
support_orchestration/watcher/: __init__.py  background_prep.py  intake.py  jira_poller.py
tests/evals/: test_baseline.py  test_harness_smoke.py
tests/glue/: test_bot.py  test_dialect_c6.py  test_jira_write.py
tests/orchestrator/: test_orchestrator.py  test_orchestrator_p7.py  test_orchestrator_p8.py  test_triage.py
tests/runtime/: test_runtime.py
tests/storage/: test_audit.py  test_state_store.py
tests/subagents/: test_registry.py  test_wes_subagent.py
tests/tools/: test_db_adapters.py  test_db_state_reader.py  test_dialect.py  test_github_adapter.py  test_github_reader.py  test_hooks.py  test_log_adapters.py  test_log_reader.py  test_mcp_server.py  test_phoenix_adapter.py  test_phoenix_resolver.py  test_vector_adapter.py
tests/watcher/: test_intake.py  test_jira_poller.py
