[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "support-orchestration"
version = "0.1.0"
description = "Agentic production-support system for warehouse automation clients"
requires-python = ">=3.10"
dependencies = [
    # Agent layer
    "claude-agent-sdk>=0.1.0",          # re-verify version at build time
    "anthropic>=0.49.0",                # raw Messages API + Batch API
    "mcp>=1.0.0",                       # in-process MCP server (FastMCP)

    # Data models + validation
    "pydantic>=2.7.0",

    # Lifecycle maps
    "pyyaml>=6.0.1",

    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",

    # Jira / Confluence
    "atlassian-python-api>=3.41.0",

    # Teams (Azure Bot REST) — bot.py degrades gracefully if absent, but cheap to keep core
    "aiohttp>=3.9.0",

    # Async runtime
    "anyio>=4.3.0",
]

[project.scripts]
run-evals = "evals.cli:sync_main"

[project.optional-dependencies]
# Real client connectivity (Direct Connect / S3 / Azure Bot). The PoC runs fully
# mocked without these — every driver is lazily imported at the call site.
prod = [
    "oracledb>=2.0.0",         # Oracle thin mode — no Instant Client needed
    "asyncpg>=0.29.0",         # Postgres + pgvector async
    "pyodbc>=5.0.0",           # MS SQL (WCS clients only); needs OS ODBC driver
    "paramiko>=3.4.0",         # SSH log access (Direct Connect clients)
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyyaml>=6.0.1",         # for fixture loading in tests
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Prompt files hold verbatim LLM prompt content (markdown tables, domain prose);
# wrapping those lines would change what the model sees.
"support_orchestration/subagents/prompts.py" = ["E501"]
"support_orchestration/orchestrator/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["support_orchestration"]
